# Trabalho-PIM-Final

./: .gitattributes  .gitignore  LICENSE  README.md  packages.txt  pyproject.toml
data/: video_saida.avi  video_saida.webm
trabalho_final/dashboard/: Etapa1.py
trabalho_final/dashboard/pages/: Etapa2.py  Etapa3.py
